--- a/spot-commerce-base/pom.xml
+++ b/spot-commerce-base/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spot-commerce-base</artifactId>
 
@@ -17,84 +19,47 @@
 			<plugin>
 				<groupId>at.spot</groupId>
 				<artifactId>spot-maven-plugin</artifactId>
-				<version>1.0-beta2-SNAPSHOT</version>
 				<executions>
 					<execution>
+						<id>Item type generation</id>
 						<phase>generate-sources</phase>
 						<goals>
 							<goal>generate-types</goal>
 						</goals>
 					</execution>
+					<execution>
+						<id>Item type post-processing</id>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>transform-types</goal>
+						</goals>
+						<configuration>
+							<includeJars>false</includeJars>
+							<classFileTransformers>
+								<classFileTransformer>
+									at.spot.core.infrastructure.instrumentation.JpaEntityClassTransformer
+								</classFileTransformer>
+							</classFileTransformers>
+						</configuration>
+					</execution>
+					<execution>
+						<id>Item type post-processing (test)</id>
+						<phase>process-test-classes</phase>
+						<goals>
+							<goal>transform-types</goal>
+						</goals>
+						<configuration>
+							<includeJars>false</includeJars>
+							<classFileTransformers>
+								<classFileTransformer>
+									at.spot.core.infrastructure.instrumentation.JpaEntityClassTransformer
+								</classFileTransformer>
+							</classFileTransformers>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 		</plugins>
-		
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>at.spot</groupId>
-										<artifactId>spot-maven-plugin</artifactId>
-										<versionRange>
-											[1.0-SNAPSHOT,)
-										</versionRange>
-										<goals>
-											<goal>generate-types</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>at.spot</groupId>
-										<artifactId>spot-maven-plugin</artifactId>
-										<versionRange>
-											[1.0-SNAPSHOT,)
-										</versionRange>
-										<goals>
-											<goal>transform-types</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<execute>
-											<runOnIncremental>true</runOnIncremental>
-											<runOnConfiguration>true</runOnConfiguration>
-										</execute>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.codehaus.mojo</groupId>
-										<artifactId>aspectj-maven-plugin</artifactId>
-										<versionRange>[1.8,)</versionRange>
-										<goals>
-											<goal>compile</goal>
-											<goal>test-compile</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<execute>
-											<runOnIncremental>true</runOnIncremental>
-										</execute>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 
 	<dependencies>
