--- a/spot-commerce-spring-base/pom.xml
+++ b/spot-commerce-spring-base/pom.xml
@@ -1,57 +1,36 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>spot-commerce-spring-base</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>spot-commerce-spring-base</artifactId>
 
-    <parent>
-        <groupId>at.spot</groupId>
-        <artifactId>spot-framework</artifactId>
-        <version>1.0-beta2-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>at.spot</groupId>
+		<artifactId>spot-framework</artifactId>
+		<version>1.0-beta2-SNAPSHOT</version>
+	</parent>
 
-    <properties>
-    </properties>
+	<dependencies>
+		<dependency>
+			<groupId>at.spot</groupId>
+			<artifactId>spot-core</artifactId>
+			<version>1.0-beta2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>at.spot</groupId>
+			<artifactId>spot-commerce-base</artifactId>
+			<version>1.0-beta2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>at.spot</groupId>
+			<artifactId>spot-cms-base</artifactId>
+			<version>1.0-beta2-SNAPSHOT</version>
+		</dependency>
 
-    <build>
-        <plugins>
-            <!-- item type generation -->
-            <plugin>
-                <groupId>at.spot</groupId>
-                <artifactId>spot-maven-plugin</artifactId>
-                <version>1.0-beta2-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>generate-types</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-        </plugins>
-    </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>at.spot</groupId>
-            <artifactId>spot-core</artifactId>
-            <version>1.0-beta2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>at.spot</groupId>
-            <artifactId>spot-commerce-base</artifactId>
-            <version>1.0-beta2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>at.spot</groupId>
-            <artifactId>spot-cms-base</artifactId>
-            <version>1.0-beta2-SNAPSHOT</version>
-        </dependency>
-        
-         <dependency>
-            <groupId>at.spot</groupId>
-            <artifactId>spot-spring-web-support</artifactId>
-            <version>1.0-beta2-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>at.spot</groupId>
+			<artifactId>spot-spring-web-support</artifactId>
+			<version>1.0-beta2-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
