--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spot-maven-plugin</artifactId>
 	<name>spOt maven plugins</name>
@@ -88,11 +90,5 @@
 			<version>2.0</version>
 		</dependency>
 
-		<!-- logging -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.apache.logging.log4j</groupId> -->
-		<!-- <artifactId>log4j-1.2-api</artifactId> -->
-		<!-- <version>2.8.2</version> -->
-		<!-- </dependency> -->
 	</dependencies>
 </project>
