--- a/pom.xml
+++ b/pom.xml
@@ -308,7 +308,7 @@
 					<version>2.5.3</version>
 					<configuration>
 						<autoVersionSubmodules>true</autoVersionSubmodules>
-						<tagNameFormat>release/@{project.artifactId}-@{project.version}</tagNameFormat>
+						<tagNameFormat>@{project.version}</tagNameFormat>
 						<branchName>master</branchName>
 						<pushChanges>false</pushChanges>
 						<localCheckout>true</localCheckout>
