fixed maven jar generation

--- a/spot-mail/pom.xml
+++ b/spot-mail/pom.xml
@@ -3,6 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spot-mail-server</artifactId>
 	<name>spOt mail server</name>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.spot</groupId>
