--- a/spot-cms-base/pom.xml
+++ b/spot-cms-base/pom.xml
@@ -3,6 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spot-cms-base</artifactId>
+	<name>spOt CMS base</name>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.spot</groupId>
