--- a/spot-core-base-models/pom.xml
+++ b/spot-core-base-models/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spot-core-base-models</artifactId>
 	<name>spOt core base models</name>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.spot</groupId>
