--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spot-core-support</artifactId>
 	<name>spOt core support</name>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.spot</groupId>
