--- a/spot-instrumentation/pom.xml
+++ b/spot-instrumentation/pom.xml
@@ -6,6 +6,7 @@
 	<version>1.0-beta2-SNAPSHOT</version>
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
+	<name>spot instrumentation</name>
 
 	<licenses>
 		<license>
