--- a/spot-spring-web-support/pom.xml
+++ b/spot-spring-web-support/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spot-spring-web-support</artifactId>
 	<name>spring web support module</name>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.spot</groupId>
