--- a/pom.xml
+++ b/pom.xml
@@ -63,15 +63,15 @@
 		<module>build-tools</module>
 		<module>spot-maven-plugin</module>
 		<module>spot-core-support</module>
-		<module>spot-core-model-infrastructure</module>
 		<module>spot-core-base-models</module>
+		<module>spot-core-model-infrastructure</module>
+		<module>spot-instrumentation</module>
 		<module>spot-core</module>
 		<module>spot-core-shell</module>
 		<module>spot-spring-web-support</module>
 		<module>spot-commerce-spring-base</module>
 		<module>spot-commerce-base</module>
 		<module>spot-cms-base</module>
-		<module>spot-instrumentation</module>
 		<!-- <module>spot-mail</module> -->
 	</modules>
 
@@ -287,17 +287,21 @@
 				</plugin>
 
 				<!-- TESTING -->
+				<!-- higher plugin version are incompatible with spring boot! -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.18.1</version>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.22.0</version>
-					<dependencies>
-						<dependency>
-							<groupId>org.apache.maven.surefire</groupId>
-							<artifactId>surefire-junit47</artifactId>
-							<version>2.22.0</version>
-						</dependency>
-					</dependencies>
+					<version>2.18.1</version>
+					<configuration>
+						<includes>
+							<include>**/*IT.java</include>
+						</includes>
+					</configuration>
 				</plugin>
 
 
