--- a/spot-commerce-spring-base/pom.xml
+++ b/spot-commerce-spring-base/pom.xml
@@ -43,12 +43,8 @@
 			</plugin>
 
 			<!-- RELEASE -->
-			<plugin>
-				<groupId>pl.project13.maven</groupId>
-				<artifactId>git-commit-id-plugin</artifactId>
-			</plugin>
 
-			<!-- ECLIPSE FIX -->
+			<!-- ECLIPSE SETTINGS -->
 			<plugin>
 				<groupId>org.eclipse.m2e</groupId>
 				<artifactId>lifecycle-mapping</artifactId>
